# pyaudio-nowadays

./: .gitignore  .pre-commit-config.yaml  README.md  setup.cfg  setup.py
examples/: error.py  play_wave.py  play_wave_callback.py  play_wave_macosx_channelmap.py  record.py  system_info.py  wire_callback.py  wire_full.py  wire_half.py
sphinx/: conf.py
src/: __init__.py  _portaudiomodule.c  _portaudiomodule.h  pyaudio.py
tests/: error_tests.py  pyaudio_tests.py
