[metadata]
name = PyAudio
version = attr: src.__version__
description = PortAudio Python Bindings
long_description = file: README.md
long_description_content_type = text/markdown
url = http://people.csail.mit.edu/hubert/pyaudio/
author = Hubert Pham
author_email = hubert@mit.edu
license = MIT
license_file = LICENSE.txt
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython

[options]
python_requires = >=3.7
include_package_data = True

[options.extras_require]
dev =
    setuptools>=46.4.0
    types-setuptools

[options.package_data]
pyaudio = py.typed

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120
extend-ignore = W605

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True

[tool:black]
line-length = 88
